(bug 40610) Prevent editing textarea from overflowing out of bodyContent
Per suggestion by Daniel Friesen, this change adds a box-sizing specification to prevent
the editing textarea from overflowing from the bodyContent in vector, monobook, and modern skins.

--- a/skins/common/commonContent.css
+++ b/skins/common/commonContent.css
@@ -113,6 +113,16 @@ img.thumbborder {
 }
 
 /**
+ * Edit forms
+ */
+#editform textarea {
+	display: block;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+/**
  * Basic styles for the user login and create account forms
  */
 #userlogin, #userloginForm {
